--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -98,5 +98,10 @@
     &copy; 2025 Sand World Evil Financing LLC LTD OY. All rights reserved.
   </footer>
 
+  <!-- Invisible Admin Button -->
+  <div class="fixed bottom-0 right-0 w-8 h-8 opacity-0 hover:opacity-20 transition-opacity duration-300">
+    <a href="{{ url_for('admin.login') }}" class="block w-full h-full bg-transparent"></a>
+  </div>
+
 </body>
 </html>
